--- a/package.json
+++ b/package.json
@@ -20,16 +20,26 @@
   },
   "homepage": "https://github.com/Kgomotso196/Helpjuice-Front-End-Test#readme",
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.29.1",
+    "file-loader": "^6.2.0",
     "hint": "^7.1.10",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
